--- a/1412.5125/JMP-23Jul20.tex
+++ b/1412.5125/JMP-23Jul20.tex
@@ -1,22 +1,9 @@
 \documentclass[12pt]{article}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
+
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -340,6 +327,21 @@ bookmarksopenlevel=10
 \newcommand{\source}{\mathfrak{s}}
 \newcommand{\target}{\mathfrak{t}}
 %%*********************************************************************
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
  \begin{document}
 \title{Quantum field theory on curved spacetimes:\\ axiomatic framework and examples}
 \author{Klaus Fredenhagen, Kasia Rejzner}
@@ -413,6 +415,8 @@ bookmarksopenlevel=10
 %\listoftodos\relax
 \tableofcontents
 \markboth{Contents}{Contents}
+
+\newpage
  \section{Introduction} 
  Since about a century, the relation between quantum physics and gravitation is not fully understood.
 Quantum theory is very successful in nonrelativistic physics where precise mathematical results can be compared with experiments,
@@ -423,6 +427,7 @@ First steps for investigating the relation between these two fundamental aspects
 gravitational field in the inflationary era. On the theoretical side, the last decades were dominated by attempts to unify general relativity with quantum theory by rather radical new concepts, the best known being string theory and loop quantum gravity. In this report, however, we will concentrate on a much more modest goal to provide a consistent interpretation of existing experimental data in the situation when gravitational forces are weak. In such circumstances one can neglect the backreaction of quantum fields on the gravitational field.
 
 In this overview article we present a formalism suitable for constructing models of QFT's on curved spacetimes. The leading principle is the emphasis on local properties. It turns out that this requires a reformulation of the standard QFT framework which also yields a new perspective for the theories on Minkowski space. The aim of the present work is to provide an introduction  into the framework, which should be accessible for both mathematical physicists and mathematicians. Other recent reviews, which take a different angle include \cite{BDH,HWRev,FewVerchReview}. In particular they discuss some important results not covered here, such as quantum energy inequalities \cite{FewPfe1,Chris2,FewPfe}, Reeh-Schlieder property \cite{Ko09}, PCT and Spin-Statistic theorem \cite{HollandsPCT,Verch01,FewsterReg}. For applications in the study of the back-reaction problem and cosmology see for example \cite{Hack,Hack14,DMP09,DMP09a,DMP11} and a recent book \cite{ThomasBook}.
+
 \section{Lorentzian geometry}
 
 Before we formulate the axioms of quantum field theory on curved spacetimes, we need to introduce some basic geometrical notions used in special and general relativity. Recall that in special relativity space and time are described together with one object, called \textit{Minkowski spacetime}. In general relativity one extends this notion to a certain class of manifolds. We will use the following definition:
