--- a/1406.6792/Unitary_Model.tex
+++ b/1406.6792/Unitary_Model.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 \pdfoutput=1
 \usepackage{jheppub}
 \usepackage{amsfonts}
@@ -6,6 +6,48 @@
 \usepackage{amscd}
 
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 
@@ -40,9 +82,8 @@ it. But unlike Hawking's completely thermal spectrum, some residual correlations
 }
 \begin{document}
 \maketitle
-\flushbottom
 
-
+\newpage
 \section{Introduction}
 \label{sec:intro}
 
@@ -495,14 +536,12 @@ b_{\omega}^{\dag}b_{\omega}\rangle \,.
 \end{split}
 \end{equation}
 Furthermore, we can also calculate the correlation function
-\begin{equation}
+\begin{multline}
 \label{eq:22}
-\begin{split}
-\langle(d_{\omega}^{\dag}d_{\omega})(d_{\omega'}^{\dag}d_{\omega'})\rangle=|g_{\omega}|^4\langle(b_{\omega}^{\dag}b_{\omega})(b_{\omega'}^{\dag}b_{\omega'})\rangle
+\langle(d_{\omega}^{\dag}d_{\omega})(d_{\omega'}^{\dag}d_{\omega'})\rangle=|g_{\omega}|^4\langle(b_{\omega}^{\dag}b_{\omega})(b_{\omega'}^{\dag}b_{\omega'})\rangle\\
 =|g_{\omega}|^4\sum_{\alpha}\langle(b_{\omega}^{\dag}b_{\omega})\arrowvert\Phi_{\alpha}\rangle\langle\Phi_{\alpha}\arrowvert(b_{\omega'}^{\dag}b_{\omega'})\rangle
 \,,
-\end{split}
-\end{equation}
+\end{multline}
 where a completeness relation in~\eqref{eq:29} has been used. Since our
 model is proposed in a unitary manner, then all the possible intermediate states will contribute
 significantly, with some correlations being preserved among the radiations in the detector\footnote{The
@@ -618,15 +657,14 @@ various states, which are well defined in two stationary regions with different 
 
 Recall $\mathcal {H}_0$ is spanned by the eigenstates of the free
 Hamiltonian $H_0$ in~\eqref{eq:5}, with $H_{\psi}$ given by $H_{a}$ in~\eqref{eq:6b}. Thus near the infinite past $I^-$ in each stationary region, we have
-\begin{equation}
+\begin{align}
 \label{eq:28}
-\begin{split}
 H_{0i}\arrowvert\Phi_{i\alpha}\rangle &=
-E_{\alpha}\arrowvert\Phi_{i\alpha}\rangle(E_{\alpha}=M_{i}+E_{i}),\qquad\arrowvert\Phi_{i\alpha}\rangle\equiv\arrowvert
+E_{\alpha}\arrowvert\Phi_{i\alpha}\rangle(E_{\alpha}=M_{i}+E_{i}),\nonumber\\
+\arrowvert\Phi_{i\alpha}\rangle&\equiv\arrowvert
 M_{i}\rangle_{B}\arrowvert0_{M_{i}}\rangle_{\psi}\otimes\arrowvert
 E_{i}\rangle_D,(i=1,2) \,,
-\end{split}
-\end{equation}
+\end{align}
 with $\alpha$ denoted as a collection of the quantum
 numbers $(M,E)$. For those eigenstates, we also have the following relations
 \begin{equation}
@@ -647,13 +685,11 @@ U_{21}(+\infty,-\infty) \,,
 \end{split}
 \end{equation}
 where the evolution operator is defined as
-\begin{equation}
+\begin{multline}
 \label{eq:31}
-\begin{split}
-U_{21}(t_2,t_1)\equiv \Omega_2(t_2)^{\dag}\Omega_1(t_1)=\exp(+i
-H_{02}t_2)\exp\{-i H(t_2-t_1)\}\exp(-i H_{01}t_1) \,.
-\end{split}
-\end{equation}
+U_{21}(t_2,t_1)\equiv \Omega_2(t_2)^{\dag}\Omega_1(t_1) \\
+=\exp(+iH_{02}t_2)\exp\{-i H(t_2-t_1)\}\exp(-i H_{01}t_1) \,.
+\end{multline}
 Since the free field
 Hamiltonian $H_{\psi}$ depends on the black hole's mass, we have $H_{01}\neq H_{02}$. Hence there is also a
 singular initial condition $U_{21}(t_0,t_0)=e^{iH_{02}t_0}e^{-iH_{01}t_0}$ like~\eqref{eq:95}.
@@ -1065,27 +1101,22 @@ b_{\omega_2}^{\dag}b_{\omega_2}\arrowvert0_M\rangle \,.
 In our model, the correlation is given in~\eqref{eq:22}. By using of
 the approximation in~\eqref{eq:48}, the general state of
 the black hole-detector system can be expressed as
-\begin{equation}
+\begin{multline}
 \label{eq:55}
-\begin{split}
 \arrowvert\phi\rangle = \epsilon\arrowvert
 M\rangle_B\arrowvert0\rangle_D+\sum_{\omega}\alpha_{\omega}\arrowvert
-M-\omega\rangle_B|\omega\rangle_D
+M-\omega\rangle_B|\omega\rangle_D\\
 +\sum_{\omega_1\omega_2}\beta_{\omega_1\omega_2}\arrowvert
 M-\omega_1-\omega_2\rangle_B\arrowvert\omega_1,\omega_2\rangle_D+\cdots
 \,.
-\end{split}
-\end{equation}
+\end{multline}
 Then the reduced density operator $\rho_D$ in~\eqref{eq:24} will be expressed as
-\begin{equation}
+\begin{multline}
 \label{eq:56}
-\begin{split}
-\rho_D &=
-|\epsilon|^2\arrowvert0\rangle_D\langle0\arrowvert+\sum_{\omega}|\alpha_{\omega}|^2\arrowvert\omega\rangle_D\langle\omega\arrowvert
+\rho_D =
+|\epsilon|^2\arrowvert0\rangle_D\langle0\arrowvert+\sum_{\omega}|\alpha_{\omega}|^2\arrowvert\omega\rangle_D\langle\omega\arrowvert\\
 +\sum_{\omega_1\omega_2}|\beta_{\omega_1\omega_2}|^2\arrowvert\omega_1,\omega_2\rangle_D\langle\omega_1,\omega_2\arrowvert+\cdots
-\,,
-\end{split}
-\end{equation}
+\end{multline}
 i.e. a statistical ensemble. After some calculations, we then get
 \begin{equation}
 \label{eq:57}
@@ -1204,16 +1235,14 @@ where we have used an approximation
 \end{split}
 \end{equation}
 This gives a black hole mass decreasing rate
-\begin{equation}
+\begin{multline}
 \label{eq:65}
-\begin{split}
 \frac{1}{2\pi}\int_{0}^{\infty}
-d{\omega}\omega|\lambda^{0}_{\omega}V_{M,\omega}|^2\simeq
+d{\omega}\omega|\lambda^{0}_{\omega}V_{M,\omega}|^2\simeq\\
 \frac{1}{2\pi}\int_{0}^{\infty}
 d{\omega}\omega|g_{\omega}V_{M,\omega}|^2e^{-8\pi M\omega} \simeq
 \frac{c}{128\pi^3 M^2}=cL_{l=0} \,,
-\end{split}
-\end{equation}
+\end{multline}
 where $c=|g_{\omega}V_{M,\omega}|^2$ is assumed to be a model
 dependent constant approximatively. $L_{l=0}$ is the $l=0$
 luminosity (without backscattering effects), a little smaller than the result $(768\pi M^2)^{-1}$~\cite{j} based on the Hawking's arguments. The transition
@@ -1288,15 +1317,14 @@ with $g^{B}_{\mu\nu}$ the classical metric of a black hole with mass $M_0$,
 and the perturbation $h_{\mu\nu}$ treated still as the quantum gravitational field based on this black hole. Analogous
 to the mode expansion~\eqref{eq:9} for the scalar field, we
 have\footnote{For simplicity, we still use the formulae of the shock wave model, so the coordinate transformations for the tensor can be ignored.}
-\begin{equation}
+\begin{align}
 \label{eq:68}
-\begin{split}
-h_{\mu\nu}=\int_{0}^{\infty}
-d\omega\sum_i\epsilon^{i}_{\mu\nu}(\omega)(e^{i}_{\omega}U_{\omega}+h.c.)=\int_{0}^{\infty}
+h_{\mu\nu}&=\int_{0}^{\infty}
+d\omega\sum_i\epsilon^{i}_{\mu\nu}(\omega)(e^{i}_{\omega}U_{\omega}+h.c.) \nonumber\\ 
+&=\int_{0}^{\infty}
 d\omega\sum_i\epsilon^{i}_{\mu\nu}(\omega)[c^{i}_{\omega}u_{\omega}+\tilde{c}^{i}_{\omega}\tilde{u}_{\omega}+h.c.]
 \,,
-\end{split}
-\end{equation}
+\end{align}
 with $\epsilon_{\mu\nu}$ the polarizations of the gravitons. The full interaction is given by
 \begin{equation}
 \label{eq:69}
@@ -1342,16 +1370,15 @@ a_{\omega_1}^{\dag}a_{\omega_2}^{\dag}\cdots$, $\sum\omega\equiv\omega_1+\omega_
 Because of the Bogoliubov transformations, this state can be
 expressed as a superposition of various states, among which two
 particular ones are
-\begin{equation}
+\begin{align}
 \label{eq:72}
-\begin{split}
-\arrowvert\phi_1\rangle_{\psi}\sim
+\arrowvert\phi_1\rangle_{\psi}&\sim
 \prod_{\omega_1}b_{\omega_1}^{\dag}\arrowvert0_{M_0}\rangle_{\psi}(\sum\omega_1=\Delta
-M_1),\qquad \arrowvert\phi_2\rangle_{\psi}\sim
+M_1),\nonumber\\
+ \arrowvert\phi_2\rangle_{\psi}&\sim
 \prod_{\omega_2}\tilde{b}_{\omega_2}^{\dag}\arrowvert0_{M_0}\rangle_{\psi}(\sum\omega_2=\Delta
 M_2) \,.
-\end{split}
-\end{equation}
+\end{align}
 After the formation of the larger black hole, the state of the
 scalar field can be chosen to be the vacuum
 $\arrowvert0_M\rangle_{\psi}$. That is, the energy $\Delta M$
@@ -1505,16 +1532,15 @@ where we have reversed the direction for the energy flowing between the
 $\tilde{b}_{\omega}$ and $\tilde{c}_{\omega}$ modes so that the energy can almost be transferred into the distant detector.
 The role played by the gravitons as an intermediate medium is thus
 demonstrated in the above diagram, or more apparently in the following expression
-\begin{equation}
+\begin{multline}
 \label{eq:80}
-\begin{split}
 \prod_{\sum(\omega_1+\omega_2)=\Delta
-M_1}(d_{\omega_1}^{\dag}d_{\omega_2}^{\dag}b_{\omega_1}b_{\omega_2})\Big\{\prod_{\sum\omega'=\Delta
+M_1}(d_{\omega_1}^{\dag}d_{\omega_2}^{\dag}b_{\omega_1}b_{\omega_2})\\
+\Big\{\prod_{\sum\omega'=\Delta
 M_1}(c_{\omega'}b_{\omega'_1}^{\dag}b_{\omega'_2}^{\dag})\prod_{\sum\omega=\Delta
 M_1}(c_{\omega}^{\dag}b_{\omega_1}b_{\omega_2})\Big\}_{g,\psi}(\tilde{c}_{\omega}\tilde{b}_{\omega_1}\tilde{b}_{\omega_2})
 \,.
-\end{split}
-\end{equation}
+\end{multline}
 The grouped contribution from the scalar and gravitational field
 serves as the propagators in the exterior region, while the terms in
 the two ends just give the model in section~\ref{sec:model} with an
@@ -1733,23 +1759,21 @@ U_{+-}(+\infty,-\infty) \,,
 \end{split}
 \end{equation}
 where the evolution operator is defined as
-\begin{equation}
+\begin{multline}
 \label{eq:93}
-\begin{split}
-U_{+-}(t_2,t_1)\equiv \Omega^+(t_2)^{\dag}\Omega^-(t_1)=\exp(+i
+U_{+-}(t_2,t_1)\equiv \Omega^+(t_2)^{\dag}\Omega^-(t_1)= \\ \exp(+i
 H^+t_2)\exp\{-i H(t_2-t_1)\}\exp(-i H^-t_1) \,.
-\end{split}
-\end{equation}
+\end{multline}
 
 Differentiating $U_{+-}(t_2,t_1)$ with respect to $t_2$ and $t_1$ respectively, we have
 \begin{subequations}\label{eq:94}
 \begin{align}
 \label{eq:94:1}
-i\frac{d}{dt_{2}}U_{+-}(t_2,t_1)=V^+(t_2)U_{+-}(t_2,t_1)\qquad
+i\frac{d}{dt_{2}}U_{+-}(t_2,t_1)=V^+(t_2)U_{+-}(t_2,t_1)\quad
 V^+(t_2)=e^{iH^+t_2}(H-H^+)e^{-iH^+t_2}\,,
 \\
 \label{eq:94:2}
--i\frac{d}{dt_{1}}U_{+-}(t_2,t_1)=U_{+-}(t_2,t_1)V^-(t_1)\qquad
+-i\frac{d}{dt_{1}}U_{+-}(t_2,t_1)=U_{+-}(t_2,t_1)V^-(t_1)\quad
 V^-(t_1)=e^{iH^-t_1}(H-H^-)e^{-iH^-t_1}\,.
 \end{align}
 \end{subequations}
@@ -2095,18 +2119,17 @@ say, analogous to~\eqref{eq:119}, we will also have
 \end{equation}
 i.e. transitions between $\arrowvert 0\rangle_A\arrowvert
 0\rangle_B$ and $\arrowvert 1\rangle_A\arrowvert 1\rangle_B$. Analogously,~\eqref{eq:120} gives a (double-) NOT gate for both the systems $A$ and $B$. This can be verified generally as
-\begin{equation}
+\begin{multline}
 \label{eq:121}
-\begin{split}
-\arrowvert\beta_{00}\rangle_{ab}(\alpha\arrowvert
+\arrowvert\beta_{00}\rangle_{ab}(\alpha
 0\rangle_A+\beta\arrowvert 1\rangle_A)(\mu\arrowvert
 0\rangle_B+\nu\arrowvert 1\rangle_B)
-\stackrel{U_{aA}^4U_{bB}^4}{\longrightarrow}\arrowvert\beta_{00}\rangle_{ab}(\alpha\arrowvert
+\stackrel{U_{aA}^4U_{bB}^4}{\longrightarrow} \\
+\arrowvert\beta_{00}\rangle_{ab}(\alpha\arrowvert
 1\rangle_A+\beta\arrowvert 0\rangle_A)(\mu\arrowvert
 1\rangle_B+\nu\arrowvert 0\rangle_B)
 \,.
-\end{split}
-\end{equation}
+\end{multline}
 Similarly, other quantum gates can also be constructed by choosing different $U_{aA}$ and $U_{bB}$.
 
 There is a cyclic property for the evolutions in~\eqref{eq:119} and~\eqref{eq:120}, where the initial state of the EPR pairs $\arrowvert\beta_{00}\rangle_{ab}$ is recovered for the four-action and eight-action. This is related to the group structure of the unitary operation as follows. By grouping the four computational basis states as a column vector
@@ -2188,17 +2211,16 @@ then send $A$ through a Hadamard gate, obtaining
 \end{split}
 \end{equation}
 which is the result of the ordinary teleportation. If we make some further operations on the $bB$, the task can be accomplished. The operations are as follows
-\begin{equation}
+\begin{multline}
 \label{eq:122c}
-\begin{split}
-\stackrel{Hadamard,B}{\longrightarrow}\cdots\stackrel{CNOT,B}{\longrightarrow}2^{-1}
-\{\arrowvert\beta_{00}\rangle_{ab}\arrowvert 0\rangle_A(\alpha\arrowvert
+\stackrel{Hadamard,B}{\longrightarrow}\cdots\stackrel{CNOT,B}{\longrightarrow}\\
+2^{-1}\{\arrowvert\beta_{00}\rangle_{ab}\arrowvert 0\rangle_A(\alpha\arrowvert
 0\rangle_B+\beta\arrowvert 1\rangle_B)+\arrowvert\beta_{01}\rangle_{ab}\arrowvert 0\rangle_A(\alpha\arrowvert
-1\rangle_B+\beta\arrowvert 0\rangle_B)\\+\arrowvert\beta_{00}\rangle_{ab}\arrowvert 1\rangle_A(\alpha\arrowvert
+1\rangle_B+\beta\arrowvert 0\rangle_B)\\
++\arrowvert\beta_{00}\rangle_{ab}\arrowvert 1\rangle_A(\alpha\arrowvert
 0\rangle_B-\beta\arrowvert 1\rangle_B)+\arrowvert\beta_{01}\rangle_{ab}\arrowvert 1\rangle_A(\alpha\arrowvert
 1\rangle_B-\beta\arrowvert 0\rangle_B)\} \,.
-\end{split}
-\end{equation}
+\end{multline}
 Analogous to the ordinary teleportation, to complete the teleportation, some measurements on $A$ and $ab$, and some classical channel are necessary to determine the final state of $B$. This means that the information can not be transferred faster than light. In the case of the black hole, the classical channels are restricted by the classical causality, which always leads to correlation information loss in the framework of effective field theory, as discussed below~\eqref{eq:f}\footnote{When combined with the white hole in which everything interior must be emitted out of the event horizon, the above causality restriction for the black hole may disappear. In this sense, the black hole and white hole are complementary to each other. In fact, in our model developed in sections~\ref{sec:Model} and~\ref{sec:gra}, the emission and absorption parts of the interactions must be combined together to guarantee the Hermitian of the Hamiltonian, or the unitary property of the evolution. From these considerations, it seems that the black hole and white hole are actually two faces of a unique space-time structure, at least in a quantum version. This unified structure is free of the causality restriction so that classical channels are open enough to transfer classical bits, too.}. However, what we need is just transferring the black hole's information outside generally in a (effective) unitary manner, so it is not necessary to know the transferred information. Hence, the result in~\eqref{eq:122c} is enough for our black hole evaporation model.
 
 Notice that the above qubit model is completely different
@@ -2274,7 +2296,7 @@ of Technology(1998).
 
 %\cite{j}
 \bibitem{j}
-Alessandro Fabbri, and Jos¨¦ Navarro-Salas, \emph{Modeling Black
+Alessandro Fabbri, and Jose Navarro-Salas, \emph{Modeling Black
 Hole Evaporation}, World Scientific Publishing Company(2005).
 
 %\cite{j1}
