--- a/2203.11530/main.tex
+++ b/2203.11530/main.tex
@@ -10,7 +10,6 @@
 \usepackage{graphicx} 
 \graphicspath{{Materials/}} %Setting the graphicspath
 \usepackage{xfrac}
-\usepackage{cleveref}
 \usepackage{dsfont}
 \usepackage{listings}
 \usepackage{xcolor}
@@ -19,6 +18,51 @@
 \lstset{basicstyle=\ttfamily,
 escapeinside={||},
 mathescape=true}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{cleveref}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 \title[Quantum-jump vs stochastic Schr\"odinger dynamics]{Quantum-jump vs stochastic Schr\"odinger dynamics for Gaussian states with quadratic Hamiltonians and linear Lindbladians}
@@ -29,7 +73,7 @@ United Kingdom}
 \ead{robson.christie13@imperial.ac.uk, j.eastman@imperial.ac.uk, Roman.Schubert@bristol.ac.uk and e.m.graefe@imperial.ac.uk}
 \vspace{10pt}
 \begin{indented}
-\item[]\today
+\item[]27 Oct 2022
 \end{indented}
 
 \begin{abstract}
@@ -539,9 +583,9 @@ Substituting \cref{eq:LOrtho} into the above we obtain
 	\mathbb{L}_{mn}(t)=\sum_{i,j=0}\overline{\widetilde{B}}_{mi}(t)\big(\sqrt{j+1} h_{\Omega}(\bar{a}_t,l) \delta_{i,j+1}\\+\sqrt{i}h_{\Omega} (a_t, l)\delta_{i,j-1}+\sqrt{2/\hbar}  h_{\Omega}(z_t-\bar{\chi},l)\delta_{i,j}\big)B^T_{j n}(t).
 \end{multline}
 Using this matrix representation of the Lindblad operator we may calculate the effect of a jump by acting directly on the coefficient vector $\mathbf{c}$. The jump maps 
-\begin{equation} \label{eqn:Hagjumpcoeffmap}
-\ket{\psi}=\sum_n c_n \hat{U}(t)\ket{n,a_0,z_0}\mapsto \ket{\psi'}=\sum_n  c'_n \hat{U}(t)\ket{n,a_0,z_0}, \quad\text{with}\quad \mathbf{c}'=\frac{\mathbb{L} \mathbf{c}}{\sqrt{\mathbf{c}^{\dagger}\mathbb{L}^{\dagger}\mathbf{O} \mathbb{L} \mathbf{c}}}.
-\end{equation}
+\begin{multline} \label{eqn:Hagjumpcoeffmap}
+\ket{\psi}=\sum_n c_n \hat{U}(t)\ket{n,a_0,z_0}\mapsto \ket{\psi'}=\sum_n  c'_n \hat{U}(t)\ket{n,a_0,z_0}, \quad\text{with}\\ \mathbf{c}'=\frac{\mathbb{L} \mathbf{c}}{\sqrt{\mathbf{c}^{\dagger}\mathbb{L}^{\dagger}\mathbf{O} \mathbb{L} \mathbf{c}}}.
+\end{multline}
 The coefficients after the jump are then used as the new input coefficients for the next stretch of non-Hermitian evolution until the next jump. This can be implemented using the following algorithm, although we may propagate any arbitrary state initial state some simplifications occur when using an initially Gaussian state. 
 \begin{enumerate} 
 	\item Discretise the time interval $(t_0,t_N) \rightarrow \{t_k \} $ with $\Delta t=t_{k+1}-t_k$;
@@ -717,9 +761,10 @@ $M(t)$ on the other hand tends to the fixed value
 The dynamics of $N(t)$ and $M(t)$ for the example considered here are depicted in figure \ref{fig:HagedornVarsPos}. We observe the expected decay in the ground state normalisation and the approach to the fixed point value in $M(t)$. 
 
 The Hagedorn raising operator $\hat{A}^{\dagger}(a_t,z_t)$ is also determined by $S(t)$ and in the long time limit it takes the form
-\begin{equation}
-    \hat{A}^{\dagger}\to \frac{N_{\infty}\e^{-i\sqrt{\frac{\omega(\lambda+\omega)}{2}}t}}{\sqrt{2 \hbar}}\left(\left(\sqrt{\zeta}+\frac{i}{\sqrt{\zeta \omega}}\Lambda^{*} \right)(\hat  x-x_t )-i\left(\frac{1}{\sqrt{\zeta}}-i\sqrt{\frac{\zeta \omega}{2 \lambda^2}}\Lambda \right) (\hat p-p_t) \right).
-\end{equation}
+\begin{multline}
+    \hat{A}^{\dagger}\to \frac{N_{\infty}\e^{-i\sqrt{\frac{\omega(\lambda+\omega)}{2}}t}}{\sqrt{2 \hbar}}\\
+    \left(\left(\sqrt{\zeta}+\frac{i}{\sqrt{\zeta \omega}}\Lambda^{*} \right)(\hat  x-x_t )-i\left(\frac{1}{\sqrt{\zeta}}-i\sqrt{\frac{\zeta \omega}{2 \lambda^2}}\Lambda \right) (\hat p-p_t) \right).
+\end{multline}
 Which we recognise as squeezed and shifted harmonic oscillator creation operator with a rotating phase of angular frequency $\sqrt{\tfrac{\omega(\lambda+\omega)}{2}}$.
 \begin{figure}
 \begin{centering}
@@ -776,15 +821,16 @@ Thus, the central dynamics are given by
 \end{equation}
 
 In the equation for the covariance matrix $G$ we immediately observe the fixed point for $G=\mathbb{I}$, corresponding to a coherent state, which is indeed approached asymptotically by any initial Gaussian state. For an initially squeezed state with $G(0)=\big(\begin{smallmatrix}\zeta&&0\\0&&\sfrac{1}{\zeta}\end{smallmatrix} \big)$ we find the time-dependent covariances
-\begin{equation}
+\begin{multline}
     \Sigma(t)=\frac{\hbar}{2}
-\begin{pmatrix}1&0\\0&1\end{pmatrix}+ \frac{\hbar e^{-\gamma t}}{4 \zeta}\begin{pmatrix}
+\begin{pmatrix}1&0\\0&1\end{pmatrix}+ \\
+\frac{\hbar e^{-\gamma t}}{4 \zeta}\begin{pmatrix}
  (\zeta -1)^2-\left(\zeta ^2-1\right) \cos (2 \omega t  ) &
    \left(\zeta ^2-1\right)  \sin (2 \omega t ) \\
   \left(\zeta ^2-1\right) \sin (2\omega t  ) &  (\zeta
    -1)^2+\left(\zeta ^2-1\right) \cos (2 \omega t  ). \\
 \end{pmatrix}
-\end{equation}
+\end{multline}
 That is, we observe the usual oscillations with frequency $2\omega$ around the coherent state covariances, which are now damped, and $\Sigma(t)$ asymptotically approaches $\Sigma(t)\to\frac{\hbar}{2}\mathbb{I}$, while $\tilde z\to (0,0)^T$, resulting in a coherent state at the origin. This behaviour is clearly visible in figure \ref{fig:SingleBehaviorAnh}, in which the expectation values and uncertainties of position and momentum in the Lindblad case are depicted as black solid lines for an initial state with $\zeta=2$ centred at $\tilde z_0=(2,0)^T$. 
 
 \begin{figure}
@@ -814,8 +860,8 @@ The complexified linearised flow of the damped oscillator model \cref{eq:AnhMode
 \end{equation}
 For an initial squeezed state with $G(0)=\big(\begin{smallmatrix}\zeta&&0\\0&&\sfrac{1}{\zeta}\end{smallmatrix} \big)$ 
 this yields the time dependent covariances in the SSE dynamics
-\begin{equation}
-    \Sigma(t)=\frac{\hbar}{2 f(t)}
+\begin{multline}
+    \Sigma(t)=\frac{\hbar}{2 f(t)}\\
 \bigg(\begin{smallmatrix}
  (\zeta ^2+1) \cosh (\gamma  t)+2 \zeta  \sinh (\gamma  t)-(\zeta ^2-1) \cos (2  \omega t
    ) & (\zeta ^2-1) \sin (2 
@@ -824,7 +870,7 @@ this yields the time dependent covariances in the SSE dynamics
    (\zeta ^2+1) \cosh (\gamma  t)+2 \zeta  \sinh (\gamma  t)+(\zeta ^2-1) \cos (2 \omega t
    ) \\
 \end{smallmatrix}\bigg),
-\end{equation}
+\end{multline}
 with 
 \begin{equation}
     f(t)=\left(\zeta ^2+1\right) \sinh (\gamma  t)+2 \zeta  \cosh (\gamma  t).
