--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-06 09:03:36 -0400 
+%% Created for Pete Su at 2023-08-07 07:45:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Christie2022,
+	author = {Robson Christie and Jessica Eastman and Roman Schubert and Eva-Maria Graefe},
+	date-added = {2023-08-07 07:45:42 -0400},
+	date-modified = {2023-08-07 07:45:44 -0400},
+	doi = {10.1088/1751-8121/ac9d73},
+	journal = {J. Phys. A: Math. Theor.},
+	note = {\href{http://arxiv.org/abs/2203.11530v2}{arxiv:2203.11530v2}},
+	number = {45},
+	pages = {455302},
+	publisher = {{IOP} Publishing},
+	title = {Quantum-jump vs stochastic Schr{\"o}dinger dynamics for Gaussian states with quadratic Hamiltonians and linear Lindbladians},
+	url = {https://doi.org/10.1088%2F1751-8121%2Fac9d73},
+	volume = {55},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1751-8121%2Fac9d73},
+	bdsk-url-2 = {https://doi.org/10.1088/1751-8121/ac9d73}}
 
 @book{Frolov1998,
 	author = {Valeri P. Frolov and Igor D. Novikov},
