--- a/2203.11530/main.tex
+++ b/2203.11530/main.tex
@@ -34,6 +34,7 @@ mathescape=true}
 %\usepackage[small]{titlesec}
 \usepackage{cite}
 \usepackage{microtype}
+\usepackage[small]{titlesec}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
