--- a/helpers/fixarxiv-lucida-euler.tex
+++ b/helpers/fixarxiv-lucida-euler.tex
@@ -22,6 +22,8 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
