--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -15,6 +15,7 @@
 \usepackage[small]{titlesec}
 \usepackage{cite}
 \usepackage{microtype}
+%\titlelabel{\thetitle.\quad}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
