--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -18,6 +18,7 @@
 \usepackage[small]{titlesec}
 \usepackage{cite}
 \usepackage{microtype}
+%\titlelabel{\thetitle.\quad}
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
