--- a/gr-qc-9309001/gr-qc-9309001.tex
+++ b/gr-qc-9309001/gr-qc-9309001.tex
@@ -12,7 +12,7 @@
 %\font\bigbf=cmbx10 scaled\magstep1
 
 \documentclass[superscriptaddress,showpacs,preprintnumbers,amsmath,amssymb,
-nofootinbib,twocolumn,aps,prd,10pt]{revtex4-1}
+nofootinbib,aps,prd,12pt]{revtex4-1}
 \usepackage{amssymb,amsmath}
 \usepackage{epsfig}
 \usepackage{xcolor}
@@ -23,6 +23,51 @@ nofootinbib,twocolumn,aps,prd,10pt]{revtex4-1}
 \usepackage{mathrsfs}
 \usepackage{mathalfa}
 \usepackage[normalem]{ulem}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 
